Fix support page stack width overflow

--- a/src/app/(client)/suporte/suporte.module.css
+++ b/src/app/(client)/suporte/suporte.module.css
@@ -1,19 +1,3 @@
-.card {
-  width: 100%;
-  max-width: 720px;
-}
-
-.section :global(.stack) {
-  width: 100%;
-}
-
-@media (max-width: 720px) {
-  .section {
-    padding-left: 12px;
-    padding-right: 12px;
-  }
-}
-
 .header {
   display: flex;
   flex-direction: column;
